# aimrt_mujoco_sim

./: .gitignore  CMakeLists.txt  README.md  README.zh_CN.md  build.sh  test.sh
.github/workflows/: Main.yml  build-workflow.yml  ci.yml  cppcheck.yml  test-workflow.yml
cmake/: GetAimRT.cmake  GetMujoco.cmake
document/: index.md
document/chapter1/: chapter1_quickstart.md
document/chapter2/: chapter2_protoclos.md
document/chapter2/protobuf/: common.md  imu_state.md  joint_command_array.md  joint_state_array.md  touch_sensor_state_array.md
document/chapter2/ros2/: common.md  imu.md  joint_command_array.md  joint_state_array.md  touch_sensor_state_array.md
document/chapter3/: chapter3_model_configration.md
document/chapter4/: chapter4_example.md
src/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/examples/hardware/: CMakeLists.txt
src/examples/hardware/foot_sensor/: CMakeLists.txt
src/examples/hardware/foot_sensor/foot_sensor_type_support_pkg/: type_support_pkg_main.cc
src/examples/hardware/hardware_type_supprot_pkg/: CMakeLists.txt  type_support_pkg_main.cc
src/examples/hardware/imu/: CMakeLists.txt
src/examples/hardware/imu/imu_type_supprot_pkg/: CMakeLists.txt  type_support_pkg_main.cc
src/examples/hardware/joint/: CMakeLists.txt
src/examples/hardware/joint/joint_type_supprot_pkg/: CMakeLists.txt  type_support_pkg_main.cc
src/examples/hardware/touch/: CMakeLists.txt
src/examples/hardware/touch/touch_sensor_type_support_pkg/: type_support_pkg_main.cc
src/examples/hardware/touch/touch_type_support_pkg/: CMakeLists.txt  type_support_pkg_main.cc
src/examples/inverted_pendulum/: CMakeLists.txt  README.md
src/examples/inverted_pendulum/module/pid_control_module/: CMakeLists.txt  global.cc  global.h  pid_control_algorithm.h  pid_control_module.cc  pid_control_module.h  pid_control_service.cc  pid_control_service.h
src/examples/inverted_pendulum/pkg/inverted_pendulum_pkg/: CMakeLists.txt  pkg_main.cc
src/module/mujoco_sim_module/: CMakeLists.txt  global.cc  global.h  mujoco_sim_module.cc  mujoco_sim_module.h
src/module/mujoco_sim_module/common/: xmodel_reader.cc  xmodel_reader.h
src/module/mujoco_sim_module/publisher/: foot_sensor_publisher.cc  foot_sensor_publisher.h  foot_sensor_ros2_publisher.cc  foot_sensor_ros2_publisher.h  imu_sensor_publisher.cc  imu_sensor_publisher.h  imu_sensor_ros2_publisher.cc  imu_sensor_ros2_publisher.h  joint_pd_sensor_ros2_publisher.cc  joint_pd_sensor_ros2_publisher.h  joint_sensor_publisher.cc  joint_sensor_publisher.h  joint_sensor_ros2_publisher.cc  joint_sensor_ros2_publisher.h  publisher_base.h  touch_sensor_publisher.cc  touch_sensor_publisher.h  touch_sensor_ros2_publisher.cc  touch_sensor_ros2_publisher.h  utils.h  utils_test.cc
src/module/mujoco_sim_module/subscriber/: joint_actuator_ros2_subscriber.cc  joint_actuator_ros2_subscriber.h  joint_actuator_subscriber.cc  joint_actuator_subscriber.h  joint_pd_actuator_ros2_subscriber.cc  joint_pd_actuator_ros2_subscriber.h  joint_pd_actuator_subscriber.cc  joint_pd_actuator_subscriber.h  subscriber_base.h
src/pkg/mujoco_sim_pkg/: CMakeLists.txt  pkg_main.cc
src/protocols/: CMakeLists.txt
src/protocols/actuator/: CMakeLists.txt
src/protocols/examples/inverted_pendulum/: CMakeLists.txt  pid_control.proto
src/protocols/hardware/imu/: imu.proto
src/protocols/hardware/joint/: joint.proto
src/protocols/hardware/sensor/: CMakeLists.txt  imu.proto  joint.proto  joint_pd.proto  joint_state.proto  touch.proto
src/protocols/hardware/sensor_ros2/: CMakeLists.txt
src/protocols/hardware/sensor_ros2/msg/touch/: TouchState.msg
